--- a/info.plist
+++ b/info.plist
@@ -8,19 +8,6 @@
 	<string>Tools</string>
 	<key>connections</key>
 	<dict>
-		<key>0AAFD85E-F63F-4E71-A7F0-CB0437691EF3</key>
-		<array>
-			<dict>
-				<key>destinationuid</key>
-				<string>9EA55D78-5EC2-4B6F-8895-7222FFB1FA2E</string>
-				<key>modifiers</key>
-				<integer>0</integer>
-				<key>modifiersubtext</key>
-				<string></string>
-				<key>vitoclose</key>
-				<false/>
-			</dict>
-		</array>
 		<key>58522435-0951-4A4D-A1FC-49550C0AFB6C</key>
 		<array>
 			<dict>
@@ -53,42 +40,6 @@
 				<key>vitoclose</key>
 				<false/>
 			</dict>
-			<dict>
-				<key>destinationuid</key>
-				<string>FAC46C3D-FB25-4359-A179-0274874BCCD3</string>
-				<key>modifiers</key>
-				<integer>0</integer>
-				<key>modifiersubtext</key>
-				<string></string>
-				<key>vitoclose</key>
-				<false/>
-			</dict>
-		</array>
-		<key>9EA55D78-5EC2-4B6F-8895-7222FFB1FA2E</key>
-		<array>
-			<dict>
-				<key>destinationuid</key>
-				<string>C796D3FF-B581-4C98-A51B-28A7D2D5208F</string>
-				<key>modifiers</key>
-				<integer>0</integer>
-				<key>modifiersubtext</key>
-				<string></string>
-				<key>vitoclose</key>
-				<false/>
-			</dict>
-		</array>
-		<key>FAC46C3D-FB25-4359-A179-0274874BCCD3</key>
-		<array>
-			<dict>
-				<key>destinationuid</key>
-				<string>0AAFD85E-F63F-4E71-A7F0-CB0437691EF3</string>
-				<key>modifiers</key>
-				<integer>0</integer>
-				<key>modifiersubtext</key>
-				<string></string>
-				<key>vitoclose</key>
-				<false/>
-			</dict>
 		</array>
 	</dict>
 	<key>createdby</key>
@@ -101,25 +52,6 @@
 	<string>WPS</string>
 	<key>objects</key>
 	<array>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>browser</key>
-				<string></string>
-				<key>spaces</key>
-				<string></string>
-				<key>url</key>
-				<string>https://www.kdocs.cn/p/{var:fileid}</string>
-				<key>utf8</key>
-				<true/>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.action.openurl</string>
-			<key>uid</key>
-			<string>F824E2BA-7848-4349-A7DB-7179BC53287C</string>
-			<key>version</key>
-			<integer>1</integer>
-		</dict>
 		<dict>
 			<key>config</key>
 			<dict>
@@ -148,9 +80,9 @@
 				<key>runningsubtext</key>
 				<string>正在查询···</string>
 				<key>script</key>
-				<string>./wps "$1"</string>
+				<string>./wps {query}</string>
 				<key>scriptargtype</key>
-				<integer>1</integer>
+				<integer>0</integer>
 				<key>scriptfile</key>
 				<string></string>
 				<key>subtext</key>
@@ -168,6 +100,25 @@
 			<string>58522435-0951-4A4D-A1FC-49550C0AFB6C</string>
 			<key>version</key>
 			<integer>3</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>browser</key>
+				<string></string>
+				<key>spaces</key>
+				<string></string>
+				<key>url</key>
+				<string>https://www.kdocs.cn/p/{var:fileid}</string>
+				<key>utf8</key>
+				<true/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.openurl</string>
+			<key>uid</key>
+			<string>F824E2BA-7848-4349-A7DB-7179BC53287C</string>
+			<key>version</key>
+			<integer>1</integer>
 		</dict>
 		<dict>
 			<key>config</key>
@@ -214,150 +165,11 @@ https://www.kdocs.cn/p/\{var:fileid\}}</string>
 			<key>version</key>
 			<integer>3</integer>
 		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>alfredfiltersresults</key>
-				<false/>
-				<key>alfredfiltersresultsmatchmode</key>
-				<integer>0</integer>
-				<key>argumenttreatemptyqueryasnil</key>
-				<true/>
-				<key>argumenttrimmode</key>
-				<integer>0</integer>
-				<key>argumenttype</key>
-				<integer>0</integer>
-				<key>escaping</key>
-				<integer>102</integer>
-				<key>keyword</key>
-				<string>wps {var:path}</string>
-				<key>queuedelaycustom</key>
-				<integer>3</integer>
-				<key>queuedelayimmediatelyinitially</key>
-				<true/>
-				<key>queuedelaymode</key>
-				<integer>0</integer>
-				<key>queuemode</key>
-				<integer>1</integer>
-				<key>runningsubtext</key>
-				<string>正在查询···</string>
-				<key>script</key>
-				<string>./wps $path</string>
-				<key>scriptargtype</key>
-				<integer>1</integer>
-				<key>scriptfile</key>
-				<string></string>
-				<key>subtext</key>
-				<string></string>
-				<key>title</key>
-				<string>浏览目录</string>
-				<key>type</key>
-				<integer>0</integer>
-				<key>withspace</key>
-				<false/>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.input.scriptfilter</string>
-			<key>uid</key>
-			<string>0AAFD85E-F63F-4E71-A7F0-CB0437691EF3</string>
-			<key>version</key>
-			<integer>3</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>alfredfiltersresults</key>
-				<false/>
-				<key>alfredfiltersresultsmatchmode</key>
-				<integer>0</integer>
-				<key>argumenttreatemptyqueryasnil</key>
-				<true/>
-				<key>argumenttrimmode</key>
-				<integer>0</integer>
-				<key>argumenttype</key>
-				<integer>0</integer>
-				<key>escaping</key>
-				<integer>102</integer>
-				<key>keyword</key>
-				<string>wps {var:path}</string>
-				<key>queuedelaycustom</key>
-				<integer>3</integer>
-				<key>queuedelayimmediatelyinitially</key>
-				<true/>
-				<key>queuedelaymode</key>
-				<integer>0</integer>
-				<key>queuemode</key>
-				<integer>1</integer>
-				<key>runningsubtext</key>
-				<string>正在查询···</string>
-				<key>script</key>
-				<string>./wps $path</string>
-				<key>scriptargtype</key>
-				<integer>1</integer>
-				<key>scriptfile</key>
-				<string></string>
-				<key>subtext</key>
-				<string></string>
-				<key>title</key>
-				<string>浏览目录</string>
-				<key>type</key>
-				<integer>0</integer>
-				<key>withspace</key>
-				<false/>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.input.scriptfilter</string>
-			<key>uid</key>
-			<string>C796D3FF-B581-4C98-A51B-28A7D2D5208F</string>
-			<key>version</key>
-			<integer>3</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>argument</key>
-				<string>wps {var:path}</string>
-				<key>passthroughargument</key>
-				<false/>
-				<key>variables</key>
-				<dict/>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.utility.argument</string>
-			<key>uid</key>
-			<string>9EA55D78-5EC2-4B6F-8895-7222FFB1FA2E</string>
-			<key>version</key>
-			<integer>1</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>argument</key>
-				<string>{var:path}</string>
-				<key>passthroughargument</key>
-				<false/>
-				<key>variables</key>
-				<dict/>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.utility.argument</string>
-			<key>uid</key>
-			<string>FAC46C3D-FB25-4359-A179-0274874BCCD3</string>
-			<key>version</key>
-			<integer>1</integer>
-		</dict>
 	</array>
 	<key>readme</key>
 	<string></string>
 	<key>uidata</key>
 	<dict>
-		<key>0AAFD85E-F63F-4E71-A7F0-CB0437691EF3</key>
-		<dict>
-			<key>xpos</key>
-			<integer>570</integer>
-			<key>ypos</key>
-			<integer>380</integer>
-		</dict>
 		<key>5335FCB0-725D-406E-8307-C5D9967B5CC7</key>
 		<dict>
 			<key>xpos</key>
@@ -370,9 +182,9 @@ https://www.kdocs.cn/p/\{var:fileid\}}</string>
 			<key>note</key>
 			<string>Show current configuration</string>
 			<key>xpos</key>
-			<integer>175</integer>
+			<integer>185</integer>
 			<key>ypos</key>
-			<integer>85</integer>
+			<integer>95</integer>
 		</dict>
 		<key>9C1E23A0-A815-4736-BFC0-E431DBC76827</key>
 		<dict>
@@ -381,33 +193,12 @@ https://www.kdocs.cn/p/\{var:fileid\}}</string>
 			<key>ypos</key>
 			<integer>260</integer>
 		</dict>
-		<key>9EA55D78-5EC2-4B6F-8895-7222FFB1FA2E</key>
-		<dict>
-			<key>xpos</key>
-			<integer>895</integer>
-			<key>ypos</key>
-			<integer>410</integer>
-		</dict>
-		<key>C796D3FF-B581-4C98-A51B-28A7D2D5208F</key>
-		<dict>
-			<key>xpos</key>
-			<integer>1105</integer>
-			<key>ypos</key>
-			<integer>380</integer>
-		</dict>
 		<key>F824E2BA-7848-4349-A7DB-7179BC53287C</key>
 		<dict>
 			<key>xpos</key>
-			<integer>425</integer>
+			<integer>430</integer>
 			<key>ypos</key>
-			<integer>85</integer>
-		</dict>
-		<key>FAC46C3D-FB25-4359-A179-0274874BCCD3</key>
-		<dict>
-			<key>xpos</key>
-			<integer>385</integer>
-			<key>ypos</key>
-			<integer>410</integer>
+			<integer>95</integer>
 		</dict>
 	</dict>
 	<key>variablesdontexport</key>
