--- a/info.plist
+++ b/info.plist
@@ -14,7 +14,7 @@
 				<key>destinationuid</key>
 				<string>F824E2BA-7848-4349-A7DB-7179BC53287C</string>
 				<key>modifiers</key>
-				<integer>262144</integer>
+				<integer>0</integer>
 				<key>modifiersubtext</key>
 				<string></string>
 				<key>vitoclose</key>
@@ -66,7 +66,7 @@
 				<key>argumenttype</key>
 				<integer>1</integer>
 				<key>escaping</key>
-				<integer>102</integer>
+				<integer>103</integer>
 				<key>keyword</key>
 				<string>wps</string>
 				<key>queuedelaycustom</key>
@@ -143,20 +143,23 @@
 			<key>config</key>
 			<dict>
 				<key>autopaste</key>
-				<false/>
+				<true/>
 				<key>clipboardtextrtf</key>
 				<string>{\rtf1\ansi\ansicpg936\cocoartf2578
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fnil\fcharset0 HelveticaNeue;}
+\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fnil\fcharset0 HelveticaNeue;\f1\fnil\fcharset134 PingFangSC-Regular;}
 {\colortbl;\red255\green255\blue255;\red0\green0\blue0;}
 {\*\expandedcolortbl;;\cssrgb\c0\c0\c0\c84706\cname controlTextColor;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\pardirnatural\partightenfactor0
-
-\f0\fs26 \cf2 \{var:name\}\
-https://www.kdocs.cn/p/\{var:fileid\}}</string>
+{\field{\*\fldinst{HYPERLINK "https://www.kdocs.cn/p/%7Bvar:fileid%7D"}}{\fldrslt 
+\f0\fs26 \cf2 https://www.kdocs.cn/p/\{var:fileid\}}}
+\f0\fs26 \cf2  \
+[
+\f1 \'bd\'f0\'c9\'bd\'ce\'c4\'b5\'b5
+\f0 ] \{var:name\}}</string>
 				<key>ignoredynamicplaceholders</key>
 				<false/>
 				<key>transient</key>
-				<false/>
+				<true/>
 			</dict>
 			<key>type</key>
 			<string>alfred.workflow.output.clipboard</string>
@@ -201,8 +204,11 @@ https://www.kdocs.cn/p/\{var:fileid\}}</string>
 			<integer>95</integer>
 		</dict>
 	</dict>
-	<key>variablesdontexport</key>
-	<array/>
+	<key>variables</key>
+	<dict>
+		<key>wps_cache_dir</key>
+		<string>/Users/zacksleo/Library/Containers/com.kingsoft.wpsoffice.mac/Data/Library/Application Support/Kingsoft/WPS Cloud Files/userdata/qing/filecache/zacksleo的云文档</string>
+	</dict>
 	<key>version</key>
 	<string>0.1</string>
 	<key>webaddress</key>
